# AlphaRing

./: .gitignore  .gitmodules  CMakeLists.txt  cpp.hint
lib/game/inc/1.3495.0.0/: offset_halo4.h  offset_mcc.h
lib/game/inc/1.3528.0.0/: offset_groundhog.h  offset_halo2.h  offset_halo3.h  offset_halo3odst.h  (+2 more)
lib/utils/src/: ThreadLocalStorage.cpp
src/: common.h  main.cpp
src/d3d11/: d3d11_impl.cpp  d3d11_impl.h  d3d11_manager.cpp  d3d11_manager.h  d3d11_util.cpp  d3d11_util.h
src/dollycam/: dollycam_game_update.cpp  dollycam_game_update.h  dollycam_game_view.cpp  dollycam_game_view.h  dollycam_imgui_view.cpp  dollycam_imgui_view.h  dollycam_model.cpp  dollycam_model.h  keyframe.cpp  keyframe.h  series.h
src/halo3/: halo3.cpp  halo3.h
src/hook/: Hook.cpp  hook_manager.cpp  hook_manager.h  patch_manager.cpp  patch_manager.h  vftable_manager.cpp  vftable_manager.h
src/hook/hde/: hde64.h
src/imgui/: imgui_graph_editor.cpp  imgui_graph_editor.h  imgui_manager.cpp  imgui_manager.h  imgui_render.h  imgui_render_groundhog.cpp  imgui_render_halo1.cpp  imgui_render_halo2.cpp  imgui_render_halo3.cpp  imgui_render_halo3odst.cpp  imgui_render_halo4.cpp  imgui_render_haloreach.cpp  imgui_render_main.cpp
src/main/: assertion.cpp  assertion.h  logging.cpp  logging.h  main.cpp  main.h  manager.h  win32.cpp  win32.h  wtsapi32.dll.cpp
src/mcc/: CGameManager.cpp  mcc.cpp  mcc_impl.h  mcc_impl_1.cpp  mcc_impl_2.cpp  mcc_manager.cpp  mcc_manager.h  mcc_offset.h  module_manager.cpp  module_manager.h  player_manager.cpp  player_manager.h
src/mcc/module/: CModule.cpp
src/mcc/splitscreen/: Splitscreen.cpp
src/multithreading/: critical_section_manager.cpp  critical_section_manager.h  event_queue_manager.cpp  event_queue_manager.h
src/render/imgui/: ImGui.cpp
src/render/window/: Window.cpp
(+6 files in other folders)
